Исправление замечаний ревьюера